log
Wed 20 Mar 2024 08:47:34 PM UTC: 
 tests:  0|5
total_score: 0/70
74cb366
Wed 20 Mar 2024 08:53:25 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:21: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |         pushBack(L, *elemento);
      |                     ^~~~~~~~~
      |                     |
      |                     int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
18fe10a
Wed 20 Mar 2024 08:53:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ea46a3e
Wed 20 Mar 2024 09:11:38 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
3282d4f
Thu 21 Mar 2024 08:33:54 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:84:7: error: unused variable ‘talla’ [-Werror=unused-variable]
   84 |   int talla = get_size(L);
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
4eb5d13
Thu 21 Mar 2024 08:34:02 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 40/70
8b9cebe
Thu 21 Mar 2024 08:59:00 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘copia_pila’:
exercises.c:111:20: error: ‘PilaAuxiliar’ is used uninitialized [-Werror=uninitialized]
  111 |   int *elemento2 = top(PilaAuxiliar);
      |                    ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
48dbf89
Thu 21 Mar 2024 08:59:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
1ef723f
